Added ccs on the code

--- a/Home.html
+++ b/Home.html
@@ -5,9 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thando's Kitchen</title>
      <link rel="icon" href="images/Cream and Black Simple Illustration Catering Logo.png" type="image/x-icon">
+     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
-    <nav>
+<body id="Homebody">
+    <nav id="navbar"> 
+        <div class="logo">
+            <img src="images/Cream and Black Simple Illustration Catering Logo.png" alt="Thando's Kitchen Logo" width="100" height="100">  
+        </div>
         <ul> <!--Navigation Bar-->
             <li><a href="About.html">About</a></li>
             <li><a href="Services.html">Services</a></li>
@@ -34,7 +38,7 @@ that reflects the vision of our clients.
 We strive to make every event a memorable and enjoyable experience
     </i></pre>
     <h3><u>Our Services</u></h3>
-    <ul>
+    <ul id="serviceslist">">
         <li>Catering for Events</li>
         <li>Wedding Catering</li>
         <li>Corporate types of  Catering</li>
@@ -43,6 +47,8 @@ We strive to make every event a memorable and enjoyable experience
 
     </ul>
     <br>
+    <h3  ><u>Gallery</u></h3>
+    <div class="image-gallery">
     <img src="images/123.jpg" alt="Catering Image"
     width="200" height="200">
     <img src="images/345.jpg" alt="Catering Image"
@@ -50,6 +56,7 @@ We strive to make every event a memorable and enjoyable experience
     <img src="Images/012.jpg" alt="Catering Image"
     width="200" height="200">
     <br>
+    </div>
     <p>If you have any Questions or would like to make an enquiry, please contact us.</p>
     <!--End of Main Content-->
     <!--Button made by AI-->
