--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thando's Kitchen</title>
      <link rel="icon" href="images/Cream and Black Simple Illustration Catering Logo.png" type="image/x-icon">
+    <link rel="stylesheet" href="styles.css">
+    
+    
 </head>
 <body>
     <nav>
