--- a/Gallary.html
+++ b/Gallary.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thando's Kitchen</title>
      <link rel="icon" href="images/Cream and Black Simple Illustration Catering Logo.png" type="image/x-icon">
+        <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <nav>
@@ -16,8 +17,11 @@
         </ul>
     </nav>
     <Br></Br>
-    <br> <!--Images Section-->
-    <img src="images/123.jpg" alt="Catering Image"
+    <br> 
+    <div class="image-gallery">
+        <!--Images Section-->
+    <img src="images/123.jpg" 
+    alt="Catering Image"
     width="200" height="200">
     <img src="images/345.jpg" alt="Catering Image"
     width="200" height="200">
@@ -30,6 +34,7 @@
     width="200" height="200">
     <img src="Images/654.jpg" alt="Catering Image"
     width="200" height="200">
+    </div>
     <br>
     <br>
 </body>
