--- a/about.html
+++ b/about.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thando's Kitchen</title>
      <link rel="icon" href="images/Cream and Black Simple Illustration Catering Logo.png" type="image/x-icon">
-</head>
+        <link rel="stylesheet" href="styles.css">
+
+    </head>
 <body>
     <nav>
         <ul><!--Navigation Bar-->
@@ -14,6 +16,7 @@
             <li><a href="Contact.html">Contact</a></li>
             <li><a href="Gallary.html">Gallery</a></li>
         </ul>
+    </nav>
 
          <br>
     <img src="images/123.jpg" alt="Catering Image"
@@ -23,7 +26,7 @@
     <img src="Images/012.jpg" alt="Catering Image"
     width="200" height="200">
     <br>
-    </nav>
+    
     <Br></Br>
     <h2><u>History</u></h2>
     <pre>
