added more css on the about us and home page

--- a/Home.html
+++ b/Home.html
@@ -24,11 +24,11 @@
 
     <h1><u>Welcome to Thando's Kitchen</u></h1>
     <br>
-    <p><i>The best catering service in  whole of Johannesburg!!</i></p>
+    <p>The best catering service in  whole of Johannesburg!!</p>
     <br>
     <br>
     <h2><u>About Us</u></h2>
-    <pre><i> 
+    <pre>
         <!--Text helped by Ai-->
 We are a catering service based in Johannesburg, specializing in different types of events and occasions based on our customers' preferences.
 Our mission is to provide exceptional culinary experiences that delights the customers experiences for their guests and people who would be attending.
@@ -36,7 +36,7 @@ With our team of skilled chefs and dedicated staff. WE are committed into delive
 Whether it's a small gathering or a grand celebration, ensuring a personalized touch
 that reflects the vision of our clients.
 We strive to make every event a memorable and enjoyable experience
-    </i></pre>
+    </pre>
     <h3><u>Our Services</u></h3>
     <ul id="serviceslist">">
         <li>Catering for Events</li>
