--- a/about.html
+++ b/about.html
@@ -10,6 +10,10 @@
     </head>
 <body>
     <nav>
+
+         <div class="logo">
+            <img src="images/Cream and Black Simple Illustration Catering Logo.png" alt="Thando's Kitchen Logo" width="100" height="100">  
+        </div>
         <ul><!--Navigation Bar-->
             <li><a href="Home.html">Home</a></li>
             <li><a href="Services.html">Services</a></li>
@@ -18,13 +22,16 @@
         </ul>
     </nav>
 
+
          <br>
+         <div class="about-image">
     <img src="images/123.jpg" alt="Catering Image"
     width="200" height="200">
     <img src="images/345.jpg" alt="Catering Image"
     width="200" height="200">
     <img src="Images/012.jpg" alt="Catering Image"
     width="200" height="200">
+    </div>
     <br>
     
     <Br></Br>
@@ -38,20 +45,20 @@ Whether it’s an intimate gathering or a grand celebration, we tailor our offer
 At Thando's Kitchen, we believe that great food brings people together, and we strive to make every event a memorable and enjoyable experience through 
 our passion for culinary excellence and customer satisfaction.</pre>
 <Br>
-    <h3><u>The Team</u></h3>
+    <h3 id="team"><u>The Team</u></h3>
     <pre>
 Our team is composed of passionate individuals who are dedicated to delivering the best culinary experiences. 
 From our talented chefs who create exquisite dishes to our attentive service staff who ensure every detail is perfect, 
 we work together to bring your vision to life. 
 At Thando's Kitchen, we believe that collaboration and creativity are key ingredients in crafting memorable events.</pre>
 <br>
-    <h3><u>Our mission</u></h3>
+    <h3 id="team"><u>Our mission</u></h3>
     <pre>
 At Thando's Kitchen, our mission is to provide exceptional catering services that exceed our clients' expectations. 
 We are committed to using the finest ingredients, showcasing culinary artistry, and delivering outstanding customer service. 
 Our goal is to create unforgettable experiences that bring people together and celebrate life's special moments.</pre>
  <br>
- <h3><u>why pick us</u></h3>
+ <h3 id="team"><u>why pick us</u></h3>
     <pre>
 At Thando's Kitchen, we believe in the power of food to bring people together. 
 We value creativity, collaboration, and a commitment to excellence in everything we do. 
