added css to enquires and added a google form in the enquires page. and added css to services

--- a/enquiry.html
+++ b/enquiry.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <nav>
+         <div class="logo">
+            <img src="images/Cream and Black Simple Illustration Catering Logo.png" alt="Thando's Kitchen Logo" width="100" height="100">  
+        </div>
         <ul> <!--Navigation Bar-->
             <li><a href="Home.html">Home</a></li>
             <li><a href="About.html">About</a></li>
@@ -20,15 +23,8 @@
     <Br></Br>
     <h1><u>Enquiry Page</u></h1>
     <br>
-    <!--Help with AI-->
-    <p>If you have any questions or would like to make an enquiry, please fill out the form below:</p>
-    <form action="submit_enquiry.html" method="post">
-        <label for="name">Name:</label><br>
-        <input type="text" id="name" name="name" required><br>
-        <label for="email">Email:</label><br>
-        <input type="email" id="email" name="email" required><br>
-        <label for="message">Message:</label><br>
-        <textarea id="message" name="message" rows="4" required></textarea><br>
-        <input type="submit" value="Submit">
-    </form>
+    <div class="form-container">
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSchWajfBC-j70bMC5szz_K1BaV3h_SwBtCAkj44Jay10gJClA/viewform?embedded=true" width="640" height="1101" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+    </div>
+
 </body>
