--- a/Gallary.html
+++ b/Gallary.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <nav>
+         <div class="logo">
+            <img src="images/Cream and Black Simple Illustration Catering Logo.png" alt="Thando's Kitchen Logo" width="100" height="100">  
+        </div>
         <ul> <!--Navigation Bar-->
             <li><a href="Home.html">Home</a></li>
             <li><a href="About.html">About</a></li>
