--- a/services.html
+++ b/services.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <nav>
+         <div class="logo">
+            <img src="images/Cream and Black Simple Illustration Catering Logo.png" alt="Thando's Kitchen Logo" width="100" height="100">  
+        </div>
         <ul> <!--Navigation Bar-->
             <li><a href="Home.html">Home</a></li>
             <li><a href="About.html">About</a></li>
@@ -26,25 +29,33 @@
         <br>
         <h5><u>Wedding Catering</u></h5>
         <br>
-        <img src="Images/567.jpg" alt="Catering Image" width="200" height="200">
+        <div class="about-image">
+            <img src="Images/567.jpg" alt="Catering Image" width="200" height="200">
+        </div>
         <br>
        <p> Thando's kitchen wedding catering service is designed to make your special day unforgettable. We offer a range of customizable menu options to suit your taste and budget and ensure that your special day is perfect.</p>
     <br>
     <h5><u>Corporate Catering</u></h5>
     <br>
-    <img src="Images/123.jpg" alt="Catering Image" width="200" height="200">
+    <div class="about-image">
+        <img src="Images/012.jpg" alt="Catering Image" width="200" height="200">
+    </div>
     <br>
    <p> Thando's kitchen corporate/business catering service is designed to meet the needs of businesses and organizations standards. We offer a full  selective choices of menu options to suit your event.</p>
    <br>
    <h5><u>Birthday Catering</u></h5>
    <br>
-   <img src="Images/345.jpg" alt="Catering Image" width="200" height="200">
+   <div class="about-image">
+    <img src="Images/654.jpg" alt="Catering Image" width="200" height="200">
+   </div>
    <br>
    <p> Thando's kitchen birthday catering service is designed to make your celebration memorable. We offer a variety of fun and delicious menu options to suit your theme and preferences.</p>
 <br>
 <h5><u>Funeral Catering</u></h5>
 <br>
-<img src="Images/012.jpg" alt="Catering Image" width="200" height="200">
+<div class="about-image">
+    <img src="Images/123.jpg" alt="Catering Image" width="200" height="200">
+</div>
 <br>
 <p> Thando's kitchen funeral catering service is designed to provide support during difficult times. We offer a range of  comforting menu options to suit your needs in delicate times.</p>
 <br>
