Added more images, Added more pages, added a dropdown menue, fixed navigation

--- a/Home.html
+++ b/Home.html
@@ -4,66 +4,94 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thando's Kitchen</title>
-     <link rel="icon" href="images/Cream and Black Simple Illustration Catering Logo.png" type="image/x-icon">
-     <link rel="stylesheet" href="styles.css">
+
+    <link rel="icon" href="images/Cream and Black Simple Illustration Catering Logo.png" type="image/x-icon">
+    <link rel="stylesheet" href="styles.css">
 </head>
+
 <body id="Homebody">
-    <nav id="navbar"> 
+
+    
+    <nav id="navbar">
         <div class="logo">
-            <img src="images/Cream and Black Simple Illustration Catering Logo.png" alt="Thando's Kitchen Logo" width="100" height="100">  
+            <img src="images/Cream and Black Simple Illustration Catering Logo.png" 
+                 alt="Thando's Kitchen Logo" width="100" height="100">
         </div>
-        <ul> <!--Navigation Bar-->
+
+        <ul>
             <li><a href="About.html">About</a></li>
-            <li><a href="Services.html">Services</a></li>
+
+    
+            <li class="dropdown">
+                <a href="#" class="dropbtn">Services</a>
+                <div class="dropdown-content">
+                    <a href="Weddings.html">Wedding Catering</a>
+                    <a href="Corporate.html">Corporate Catering</a>
+                    <a href="Birthday.html">Birthday Catering</a>
+                    <a href="Funeral.html">Funeral Catering</a>
+                </div>
+            </li>
+
             <li><a href="Contact.html">Contact</a></li>
             <li><a href="Gallary.html">Gallery</a></li>
             <li><a href="enquiry.html">Enquiry</a></li>
         </ul>
     </nav>
-    <Br></Br>
 
+    <br>
+
+    <!-- Welcome Section -->
     <h1><u>Welcome to Thando's Kitchen</u></h1>
-    <br>
-    <p>The best catering service in  whole of Johannesburg!!</p>
-    <br>
-    <br>
+    <p>The best catering service in the whole of Johannesburg!</p>
+
+    <br><br>
+
+    <!-- About Us -->
     <h2><u>About Us</u></h2>
+
     <pre>
-        <!--Text helped by Ai-->
-We are a catering service based in Johannesburg, specializing in different types of events and occasions based on our customers' preferences.
-Our mission is to provide exceptional culinary experiences that delights the customers experiences for their guests and people who would be attending.
-With our team of skilled chefs and dedicated staff. WE are committed into delivering exceptional food and world class services that exceeds expectations.
-Whether it's a small gathering or a grand celebration, ensuring a personalized touch
-that reflects the vision of our clients.
-We strive to make every event a memorable and enjoyable experience
+We are a catering service based in Johannesburg, specializing in different types 
+of events and occasions based on our customers' preferences.
+
+Our mission is to provide exceptional culinary experiences that delight our 
+customers and their guests.
+
+With a team of skilled chefs and dedicated staff, we are committed to delivering 
+amazing food and world-class service that exceeds expectations.
+
+Whether it’s a small gathering or a grand celebration, we bring a personalized 
+touch that reflects your vision and creates memorable moments.
     </pre>
+
+    <!-- Services Section -->
     <h3><u>Our Services</u></h3>
-    <ul id="serviceslist">">
+
+    <ul id="serviceslist">
         <li>Catering for Events</li>
         <li>Wedding Catering</li>
-        <li>Corporate types of  Catering</li>
+        <li>Corporate Catering</li>
         <li>Birthday Catering</li>
         <li>Funeral Catering</li>
-
     </ul>
-    <br>
-    <h3  ><u>Gallery</u></h3>
-    <div class="image-gallery">
-    <img src="images/123.jpg" alt="Catering Image"
-    width="200" height="200">
-    <img src="images/345.jpg" alt="Catering Image"
-    width="200" height="200">
-    <img src="Images/012.jpg" alt="Catering Image"
-    width="200" height="200">
-    <br>
-    </div>
-    <p>If you have any Questions or would like to make an enquiry, please contact us.</p>
-    <!--End of Main Content-->
-    <!--Button made by AI-->
 
-    <a href="Contact.html" style="display:inline-block; padding:10px 20px; background-color:#6d4b01; color:white; font-size:16px; text-decoration:none; border-radius:5px;">
-  Contact Us
-</a>
+    <br>
+
+    <!-- Gallery Section -->
+    <h3><u>Gallery</u></h3>
+
+    <div class="image-gallery">
+        <img src="images/123.jpg" alt="Catering Image" width="200" height="200">
+        <img src="images/345.jpg" alt="Catering Image" width="200" height="200">
+        <img src="images/012.jpg" alt="Catering Image" width="200" height="200">
+    </div>
+
+    <p>If you have any questions or would like to make an enquiry, please contact us.</p>
+
+    <!-- Contact Button -->
+    <a href="Contact.html" 
+       style="display:inline-block; padding:10px 20px; background-color:#6d4b01; color:white; font-size:16px; text-decoration:none; border-radius:5px;">
+        Contact Us
+    </a>
 
 </body>
 </html>
