--- a/Gallary.html
+++ b/Gallary.html
@@ -4,20 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thando's Kitchen</title>
-     <link rel="icon" href="images/Cream and Black Simple Illustration Catering Logo.png" type="image/x-icon">
-        <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="images/Cream and Black Simple Illustration Catering Logo.png" type="image/x-icon">
+    <link rel="stylesheet" href="styles.css">
 </head>
-<body>
-    <nav>
-         <div class="logo">
-            <img src="images/Cream and Black Simple Illustration Catering Logo.png" alt="Thando's Kitchen Logo" width="100" height="100">  
+
+<body id="Homebody">
+
+    
+    <nav id="navbar">
+        <div class="logo">
+            <img src="images/Cream and Black Simple Illustration Catering Logo.png" 
+                 alt="Thando's Kitchen Logo" width="100" height="100">
         </div>
-        <ul> <!--Navigation Bar-->
-            <li><a href="Home.html">Home</a></li>
+
+        <ul>
             <li><a href="About.html">About</a></li>
-            <li><a href="Services.html">Services</a></li>
+
+            
+            <li class="dropdown">
+                <a href="#" class="dropbtn">Services</a>
+                <div class="dropdown-content">
+                    <a href="Weddings.html">Wedding Catering</a>
+                    <a href="Corporate.html">Corporate Catering</a>
+                    <a href="Birthday.html">Birthday Catering</a>
+                    <a href="Funeral.html">Funeral Catering</a>
+                </div>
+            </li>
+
+            <li><a href="Contact.html">Contact</a></li>
+            <li><a href="Home.html">Home</a></li>
             <li><a href="enquiry.html">Enquiry</a></li>
         </ul>
+    </nav>
+
     </nav>
     <Br></Br>
     <br> 
