--- a/about.html
+++ b/about.html
@@ -3,35 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Thando's Kitchen</title>
-     <link rel="icon" href="images/Cream and Black Simple Illustration Catering Logo.png" type="image/x-icon">
-        <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="images/Cream and Black Simple Illustration Catering Logo.png" type="image/x-icon">
+    <link rel="stylesheet" href="styles.css">
+</head>
 
-    </head>
-<body>
-    <nav>
+<body id="Homebody">
 
-         <div class="logo">
-            <img src="images/Cream and Black Simple Illustration Catering Logo.png" alt="Thando's Kitchen Logo" width="100" height="100">  
+    
+    <nav id="navbar">
+        <div class="logo">
+            <img src="images/Cream and Black Simple Illustration Catering Logo.png" 
+                 alt="Thando's Kitchen Logo" width="100" height="100">
         </div>
-        <ul><!--Navigation Bar-->
+
+        <ul>
             <li><a href="Home.html">Home</a></li>
-            <li><a href="Services.html">Services</a></li>
+
+            <li class="dropdown">
+                <a href="#" class="dropbtn">Services</a>
+                <div class="dropdown-content">
+                    <a href="Weddings.html">Wedding Catering</a>
+                    <a href="Corporate.html">Corporate Catering</a>
+                    <a href="Birthday.html">Birthday Catering</a>
+                    <a href="Funeral.html">Funeral Catering</a>
+                </div>
+            </li>
+
             <li><a href="Contact.html">Contact</a></li>
             <li><a href="Gallary.html">Gallery</a></li>
+            <li><a href="enquiry.html">Enquiry</a></li>
         </ul>
     </nav>
 
-
-         <br>
-         <div class="about-image">
-    <img src="images/123.jpg" alt="Catering Image"
-    width="200" height="200">
-    <img src="images/345.jpg" alt="Catering Image"
-    width="200" height="200">
-    <img src="Images/012.jpg" alt="Catering Image"
-    width="200" height="200">
-    </div>
     <br>
     
     <Br></Br>
