added java and more css

--- a/Gallary.html
+++ b/Gallary.html
@@ -10,34 +10,36 @@
 
 <body id="Homebody">
 
-    
+    <!-- NAVIGATION -->
     <nav id="navbar">
-        <div class="logo">
-            <img src="images/Cream and Black Simple Illustration Catering Logo.png" 
-                 alt="Thando's Kitchen Logo" width="100" height="100">
+        <div class="nav-container">
+
+            <div class="logo">
+                <img src="images/Cream and Black Simple Illustration Catering Logo.png" 
+                     alt="Thando's Kitchen Logo">
+            </div>
+
+            <ul class="nav-links">
+                <li><a href="About.html">About</a></li>
+
+                <li class="dropdown">
+                    <a href="#" class="dropbtn">Services</a>
+                    <div class="dropdown-content">
+                        <a href="Weddings.html">Wedding Catering</a>
+                        <a href="Corporate.html">Corporate Catering</a>
+                        <a href="Birthday.html">Birthday Catering</a>
+                        <a href="Funeral.html">Funeral Catering</a>
+                    </div>
+                </li>
+
+                <li><a href="Contact.html">Contact</a></li>
+                <li><a href="Home.html">home</a></li>
+                <li><a href="enquiry.html">Enquiry</a></li>
+            </ul>
+
         </div>
-
-        <ul>
-            <li><a href="About.html">About</a></li>
-
-            
-            <li class="dropdown">
-                <a href="#" class="dropbtn">Services</a>
-                <div class="dropdown-content">
-                    <a href="Weddings.html">Wedding Catering</a>
-                    <a href="Corporate.html">Corporate Catering</a>
-                    <a href="Birthday.html">Birthday Catering</a>
-                    <a href="Funeral.html">Funeral Catering</a>
-                </div>
-            </li>
-
-            <li><a href="Contact.html">Contact</a></li>
-            <li><a href="Home.html">Home</a></li>
-            <li><a href="enquiry.html">Enquiry</a></li>
-        </ul>
     </nav>
 
-    </nav>
     <Br></Br>
     <br> 
     <div class="image-gallery">
@@ -52,9 +54,13 @@
     <br>
     <img src="Images/567.jpg" alt="Catering Image"
     width="200" height="200">
-    <img src="Images/0987.jpg" alt="Catering Image"
+    <img src="Images/Birthday.jpg" alt="Catering Image"
     width="200" height="200">
     <img src="Images/654.jpg" alt="Catering Image"
+    width="200" height="200">
+    <img src="Images/Cooperate catering.jpg" alt="Catering Image"
+    width="200" height="200">
+    <img src="Images/Wedding catering.jpg" alt="Catering Image"
     width="200" height="200">
     </div>
     <br>
