--- a/Home.html
+++ b/Home.html
@@ -11,87 +11,115 @@
 
 <body id="Homebody">
 
-    
+    <!-- ============================
+         NAVIGATION
+    ============================ -->
     <nav id="navbar">
-        <div class="logo">
-            <img src="images/Cream and Black Simple Illustration Catering Logo.png" 
-                 alt="Thando's Kitchen Logo" width="100" height="100">
+        <div class="nav-container">
+
+            <div class="logo">
+                <img src="images/Cream and Black Simple Illustration Catering Logo.png" 
+                     alt="Thando's Kitchen Logo">
+            </div>
+
+            <ul class="nav-links">
+                <li><a href="About.html">About</a></li>
+
+                <li class="dropdown">
+                    <a href="#" class="dropbtn">Services</a>
+                    <div class="dropdown-content">
+                        <a href="Weddings.html">Wedding Catering</a>
+                        <a href="Corporate.html">Corporate Catering</a>
+                        <a href="Birthday.html">Birthday Catering</a>
+                        <a href="Funeral.html">Funeral Catering</a>
+                    </div>
+                </li>
+
+                <li><a href="Contact.html">Contact</a></li>
+                <li><a href="Gallary.html">Gallery</a></li>
+                <li><a href="enquiry.html">Enquiry</a></li>
+            </ul>
+
         </div>
-
-        <ul>
-            <li><a href="About.html">About</a></li>
-
-    
-            <li class="dropdown">
-                <a href="#" class="dropbtn">Services</a>
-                <div class="dropdown-content">
-                    <a href="Weddings.html">Wedding Catering</a>
-                    <a href="Corporate.html">Corporate Catering</a>
-                    <a href="Birthday.html">Birthday Catering</a>
-                    <a href="Funeral.html">Funeral Catering</a>
-                </div>
-            </li>
-
-            <li><a href="Contact.html">Contact</a></li>
-            <li><a href="Gallary.html">Gallery</a></li>
-            <li><a href="enquiry.html">Enquiry</a></li>
-        </ul>
     </nav>
 
     <br>
 
-    <!-- Welcome Section -->
+    <!-- ============================
+         WELCOME SECTION
+    ============================ -->
     <h1><u>Welcome to Thando's Kitchen</u></h1>
     <p>The best catering service in the whole of Johannesburg!</p>
 
     <br><br>
 
-    <!-- About Us -->
-    <h2><u>About Us</u></h2>
+    <!-- ============================
+         ABOUT US CARD
+    ============================ -->
+    <div class="Cards">
+        <h2>About Us</h2>
 
-    <pre>
-We are a catering service based in Johannesburg, specializing in different types 
-of events and occasions based on our customers' preferences.
+        <p>
+            We are a catering service based in Johannesburg, specializing in different 
+            types of events and occasions based on our customers' preferences.
+        </p>
 
-Our mission is to provide exceptional culinary experiences that delight our 
-customers and their guests.
+        <p>
+            Our mission is to provide exceptional culinary experiences that delight our 
+            customers and their guests.
+        </p>
 
-With a team of skilled chefs and dedicated staff, we are committed to delivering 
-amazing food and world-class service that exceeds expectations.
+        <p>
+            With a team of skilled chefs and dedicated staff, we are committed to delivering 
+            amazing food and world-class service that exceeds expectations.
+        </p>
 
-Whether it’s a small gathering or a grand celebration, we bring a personalized 
-touch that reflects your vision and creates memorable moments.
-    </pre>
+        <p>
+            Whether it’s a small gathering or a grand celebration, we bring a personalized 
+            touch that reflects your vision and creates memorable moments.
+        </p>
+    </div>
 
-    <!-- Services Section -->
+    <!-- ============================
+         SERVICES LIST
+    ============================ -->
     <h3><u>Our Services</u></h3>
 
     <ul id="serviceslist">
-        <li>Catering for Events</li>
-        <li>Wedding Catering</li>
-        <li>Corporate Catering</li>
-        <li>Birthday Catering</li>
-        <li>Funeral Catering</li>
+        <li class="service-item">Catering for Events</li>
+        <li class="service-item">Wedding Catering</li>
+        <li class="service-item">Corporate Catering</li>
+        <li class="service-item">Birthday Catering</li>
+        <li class="service-item">Funeral Catering</li>
     </ul>
 
-    <br>
+    <div id="serviceInfo" class="service-info"></div>
 
-    <!-- Gallery Section -->
+    <!-- ============================
+         GALLERY
+    ============================ -->
     <h3><u>Gallery</u></h3>
 
     <div class="image-gallery">
-        <img src="images/123.jpg" alt="Catering Image" width="200" height="200">
-        <img src="images/345.jpg" alt="Catering Image" width="200" height="200">
-        <img src="images/012.jpg" alt="Catering Image" width="200" height="200">
+        <img src="images/123.jpg" alt="Catering Image">
+        <img src="images/345.jpg" alt="Catering Image">
+        <img src="images/012.jpg" alt="Catering Image">
     </div>
 
     <p>If you have any questions or would like to make an enquiry, please contact us.</p>
 
-    <!-- Contact Button -->
-    <a href="Contact.html" 
-       style="display:inline-block; padding:10px 20px; background-color:#6d4b01; color:white; font-size:16px; text-decoration:none; border-radius:5px;">
+    <a href="Contact.html" class="contactBtn">
         Contact Us
     </a>
 
+    <!-- ============================
+         LIGHTBOX POPUP
+    ============================ -->
+    <div id="lightbox" class="lightbox">
+        <span id="closeBtn">&times;</span>
+        <img id="lightboxImg" src="">
+    </div>
+
+    <script src="java.js"></script>
 </body>
 </html>
