--- a/Weddings.html
+++ b/Weddings.html
@@ -7,32 +7,36 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 
-<body>
+<body id="Homebody">
 
-    <!-- Navigation Bar -->
-    <nav>
-        <div class="logo">
-            <img src="images/Cream and Black Simple Illustration Catering Logo.png" 
-            alt="Thando's Kitchen Logo" width="100" height="100">
+    <!-- NAVIGATION -->
+    <nav id="navbar">
+        <div class="nav-container">
+
+            <div class="logo">
+                <img src="images/Cream and Black Simple Illustration Catering Logo.png" 
+                     alt="Thando's Kitchen Logo">
+            </div>
+
+            <ul class="nav-links">
+                <li><a href="About.html">About</a></li>
+
+                <li class="dropdown">
+                    <a href="#" class="dropbtn">Services</a>
+                    <div class="dropdown-content">
+                        <a href="Weddings.html">Wedding Catering</a>
+                        <a href="Corporate.html">Corporate Catering</a>
+                        <a href="Birthday.html">Birthday Catering</a>
+                        <a href="Funeral.html">Funeral Catering</a>
+                    </div>
+                </li>
+
+                <li><a href="Contact.html">Contact</a></li>
+                <li><a href="Gallary.html">Gallery</a></li>
+                <li><a href="enquiry.html">Enquiry</a></li>
+            </ul>
+
         </div>
-
-        <ul>
-            <li><a href="Home.html">Home</a></li>
-            <li><a href="About.html">About</a></li>
-
-            <li class="dropdown">
-                <a href="#" class="dropbtn">Services</a>
-                <div class="dropdown-content">
-                    <a href="Weddings.html">Wedding Catering</a>
-                    <a href="Corporate.html">Corporate Catering</a>
-                    <a href="Birthday.html">Birthday Catering</a>
-                    <a href="Funeral.html">Funeral Catering</a>
-                </div>
-            </li>
-
-            <li><a href="Gallary.html">Gallery</a></li>
-            <li><a href="enquiry.html">Enquiry</a></li>
-        </ul>
     </nav>
 
     <!-- Page Content -->
