--- a/about.html
+++ b/about.html
@@ -9,64 +9,69 @@
 
 <body id="Homebody">
 
-    
+    <!-- NAVIGATION -->
     <nav id="navbar">
-        <div class="logo">
-            <img src="images/Cream and Black Simple Illustration Catering Logo.png" 
-                 alt="Thando's Kitchen Logo" width="100" height="100">
+        <div class="nav-container">
+
+            <div class="logo">
+                <img src="images/Cream and Black Simple Illustration Catering Logo.png" 
+                     alt="Thando's Kitchen Logo">
+            </div>
+
+            <ul class="nav-links">
+                <li><a href="Home.html">Home</a></li>
+
+                <li class="dropdown">
+                    <a href="#" class="dropbtn">Services</a>
+                    <div class="dropdown-content">
+                        <a href="Weddings.html">Wedding Catering</a>
+                        <a href="Corporate.html">Corporate Catering</a>
+                        <a href="Birthday.html">Birthday Catering</a>
+                        <a href="Funeral.html">Funeral Catering</a>
+                    </div>
+                </li>
+
+                <li><a href="Contact.html">Contact</a></li>
+                <li><a href="Gallary.html">Gallery</a></li>
+                <li><a href="enquiry.html">Enquiry</a></li>
+            </ul>
+
         </div>
-
-        <ul>
-            <li><a href="Home.html">Home</a></li>
-
-            <li class="dropdown">
-                <a href="#" class="dropbtn">Services</a>
-                <div class="dropdown-content">
-                    <a href="Weddings.html">Wedding Catering</a>
-                    <a href="Corporate.html">Corporate Catering</a>
-                    <a href="Birthday.html">Birthday Catering</a>
-                    <a href="Funeral.html">Funeral Catering</a>
-                </div>
-            </li>
-
-            <li><a href="Contact.html">Contact</a></li>
-            <li><a href="Gallary.html">Gallery</a></li>
-            <li><a href="enquiry.html">Enquiry</a></li>
-        </ul>
     </nav>
 
     <br>
     
     <Br></Br>
+    <div class="Cards1">
     <h2><u>History</u></h2>
-    <pre>
+    <p>
 Thando's Kitchen is a catering service based in Johannesburg, 
 started with the vision of providing exceptional culinary experiences. 
 From the beginning, our mission has been to delight the senses and create lasting memories for our clients and their guests.
 With a dedicated team of skilled chefs and staff, we have built a reputation for delivering high-quality food and impeccable service.
 Whether it’s an intimate gathering or a grand celebration, we tailor our offerings to meet each client's unique needs, reflecting their vision. 
 At Thando's Kitchen, we believe that great food brings people together, and we strive to make every event a memorable and enjoyable experience through 
-our passion for culinary excellence and customer satisfaction.</pre>
+our passion for culinary excellence and customer satisfaction.</p>
 <Br>
     <h3 id="team"><u>The Team</u></h3>
-    <pre>
+    <p>
 Our team is composed of passionate individuals who are dedicated to delivering the best culinary experiences. 
 From our talented chefs who create exquisite dishes to our attentive service staff who ensure every detail is perfect, 
 we work together to bring your vision to life. 
-At Thando's Kitchen, we believe that collaboration and creativity are key ingredients in crafting memorable events.</pre>
+At Thando's Kitchen, we believe that collaboration and creativity are key ingredients in crafting memorable events.</p>
 <br>
     <h3 id="team"><u>Our mission</u></h3>
-    <pre>
+    <p>
 At Thando's Kitchen, our mission is to provide exceptional catering services that exceed our clients' expectations. 
 We are committed to using the finest ingredients, showcasing culinary artistry, and delivering outstanding customer service. 
 Our goal is to create unforgettable experiences that bring people together and celebrate life's special moments.</pre>
  <br>
  <h3 id="team"><u>why pick us</u></h3>
-    <pre>
+    <p>
 At Thando's Kitchen, we believe in the power of food to bring people together. 
 We value creativity, collaboration, and a commitment to excellence in everything we do. 
 Our team is dedicated to continuous improvement and innovation, ensuring that we always deliver the best possible experiences for our clients.</pre>
-
+    </div>
 <br>
  <a href="Contact.html" style="display:inline-block; padding:10px 20px; background-color:#6d4b01; color:white; font-size:16px; text-decoration:none; border-radius:5px;">
   Contact Us
