changes the service page to the product page, added css and java to the pages added animations with the help with youtube

--- a/Corporate.html
+++ b/Corporate.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wedding Catering - Thando's Kitchen</title>
+    <link rel="icon" href="images/Cream and Black Simple Illustration Catering Logo.png" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -28,6 +29,7 @@
                         <a href="Corporate.html">Corporate Catering</a>
                         <a href="Birthday.html">Birthday Catering</a>
                         <a href="Funeral.html">Funeral Catering</a>
+                        <a href="Products.html">Products</a>
                     </div>
                 </li>
 
