--- a/Home.html
+++ b/Home.html
@@ -10,10 +10,6 @@
 </head>
 
 <body id="Homebody">
-
-    <!-- ============================
-         NAVIGATION
-    ============================ -->
     <nav id="navbar">
         <div class="nav-container">
 
@@ -32,6 +28,7 @@
                         <a href="Corporate.html">Corporate Catering</a>
                         <a href="Birthday.html">Birthday Catering</a>
                         <a href="Funeral.html">Funeral Catering</a>
+                        <a href="Products.html">Products</a>
                     </div>
                 </li>
 
