--- a/about.html
+++ b/about.html
@@ -28,6 +28,7 @@
                         <a href="Corporate.html">Corporate Catering</a>
                         <a href="Birthday.html">Birthday Catering</a>
                         <a href="Funeral.html">Funeral Catering</a>
+                        <a href="Products.html">Products</a>
                     </div>
                 </li>
 
