added more javascript code and fixed errors and updated the html

--- a/Corporate.html
+++ b/Corporate.html
@@ -41,21 +41,21 @@
         </div>
     </nav>
 
-    <!-- Page Content -->
+   
     <section class="service-section">
 
-        <!-- TEXT LEFT -->
+       
         <div class="service-text">
             <h1>Cooperate Catering</h1>
             <p>
                 Thando's Kitchen cooperate catering service is designed to make your special day 
-                unforgettable. We offer customizable menu options that fit your budget, theme, and 
+                unforgettable. We various customizable menu options that fit your budget, theme, and 
                 overall vision. Our team ensures your big day runs smoothly with delicious food, 
                 professional service, and an elegant setup that elevates your celebration.
             </p>
         </div>
 
-        <!-- IMAGE RIGHT -->
+        
         <div class="service-image">
             <img src="Images/Cooperate catering.jpg" alt="Cooperate Catering">
         </div>
