--- a/Funeral.html
+++ b/Funeral.html
@@ -41,7 +41,7 @@
         </div>
     </nav>
 
-    <!-- Page Content -->
+    
     <section class="service-section">
 
        
@@ -49,7 +49,7 @@
             <h1>Funeral Catering</h1>
             <p>
                 Thando's Kitchen funeral catering service is designed to provide support and comfort during difficult times. 
-                We offer a range of menu options that can be customized to honor your loved one's memory. 
+                We offer a different ranges of menu options that can be customized to honor your loved one's memory. 
                 Our compassionate team is dedicated to ensuring a respectful and seamless catering experience.
             </p>
         </div>
@@ -60,6 +60,7 @@
         </div>
 
     </section>
+    <script src="java.js"></script>
 
 </body>
 </html>
