--- a/Weddings.html
+++ b/Weddings.html
@@ -22,6 +22,8 @@
             <ul class="nav-links">
                 <li><a href="About.html">About</a></li>
 
+                <!--Dropdown-->
+
                 <li class="dropdown">
                     <a href="#" class="dropbtn">Services</a>
                     <div class="dropdown-content">
@@ -44,23 +46,24 @@
     <!-- Page Content -->
     <section class="service-section">
 
-        <!-- TEXT LEFT -->
+        
         <div class="service-text">
             <h1>Wedding Catering</h1>
             <p>
-                Thando's Kitchen wedding catering service is designed to make your special day 
-                unforgettable. We offer customizable menu options that fit your budget, theme, and 
+                Thando's Kitchen wedding catering service is designed to make your special day very much 
+                unforgettable. We offer customizable menu options that fit your price range and theme, and 
                 overall vision. Our team ensures your big day runs smoothly with delicious food, 
-                professional service, and an elegant setup that elevates your celebration.
+                professional service, and an elegant setup that elevates your specialcelebration.
             </p>
         </div>
 
-        <!-- IMAGE RIGHT -->
+        
         <div class="service-image">
             <img src="Images/Wedding catering.jpg" alt="Wedding Catering">
         </div>
 
     </section>
+    <script src="java.js"></script>
 
 </body>
 </html>
