--- a/about.html
+++ b/about.html
@@ -75,5 +75,8 @@ Our team is dedicated to continuous improvement and innovation, ensuring that we
     </div>
 <br>
  <a href="Contact.html" style="display:inline-block; padding:10px 20px; background-color:#6d4b01; color:white; font-size:16px; text-decoration:none; border-radius:5px;">
+
   Contact Us
+  <script src="java.js"></script>
+  
 </body>
