--- a/enquiry.html
+++ b/enquiry.html
@@ -47,5 +47,6 @@
     <div class="form-container">
         <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSchWajfBC-j70bMC5szz_K1BaV3h_SwBtCAkj44Jay10gJClA/viewform?embedded=true" width="640" height="1101" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
     </div>
+    <script src="java.js"></script>
 
 </body>
