--- a/Gallary.html
+++ b/Gallary.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css">
 
     <style>
-        /* CLASSIC GALLERY STYLES */
+       
         .image-gallery {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
@@ -80,6 +80,7 @@
         <img src="Images/Cooperate catering.jpg" alt="Catering Image">
         <img src="Images/Wedding catering.jpg" alt="Catering Image">
     </div>
+    <script src="java.js"></script>
 
 </body>
 </html>
