added a footer with some css

--- a/Home.html
+++ b/Home.html
@@ -108,6 +108,17 @@
         <img id="lightboxImg" src="">
     </div>
 
+     <footer>
+    <p>&copy; 2025 <strong>Thando's Kitchen</strong>. All rights reserved.</p>
+    <p class="social-icons">
+      Follow us: 
+      <a href="#"><i class="fab fa-facebook-f"></i></a>
+      <a href="#"><i class="fab fa-twitter"></i></a>
+      <a href="#"><i class="fab fa-instagram"></i></a>
+    </p>
+    </footer>
+    <p>
+
     <script src="java.js"></script>
 </body>
 </html>
